# images/

pkgdatadir = $(datadir)/games/@PACKAGE@/images
pkgdata_DATA = \
aarmco.rgb \
adverts.rgb \
anvil.rgb \
backpack.rgb \
banana.rgb \
bananawrap.rgb \
bonusblock.rgb \
bow.rgb \
brick.rgb \
butterfly.rgb \
bzzt.rgb \
candy_stripe.rgb \
chess.rgb \
chrome2.rgb \
chrome.rgb \
concrete.rgb \
dinoicon.rgb \
dinoshadow.rgb \
dirt.rgb \
dirtwall.rgb \
egypt.rgb \
embossed_herring.rgb \
eviltuxicon.rgb \
explode.rgb \
fence.rgb \
flames.rgb \
floor.rgb \
fuzzy.rgb \
fuzzy_sand.rgb \
Gown_beak.rgb \
Gown_body.rgb \
grass.rgb \
herringbones.rgb \
herring.rgb \
herringwall.rgb \
hexley_eye.rgb \
hexleyicon.rgb \
hexley_kart_textura.rgb \
hexleyshadow.rgb \
homework.rgb \
homingmissile.rgb \
icecreamtruck.rgb \
lava2.rgb \
lava.rgb \
lscales.rgb \
lunchbox2.rgb \
lunchbox.rgb \
magnet.rgb \
mathclassceiling.rgb \
mathclasseast.rgb \
mathclassfloor.rgb \
mathclassnorth.rgb \
mathclasssouth.rgb \
mathclasswest.rgb \
metalgrid.rgb \
missile.rgb \
mriceblockicon.rgb \
mriceblockshadow.rgb \
nolokicon.rgb \
palm.rgb \
palmtree.rgb \
parachute.rgb \
pebbles.rgb \
Penguin_orig.rgb \
pennyicon.rgb \
pennyshadow.rgb \
pyramidwall.rgb \
railing.rgb \
rainbow3.rgb \
rainbow.rgb \
redwhite.rgb \
roadway.rgb \
ruler.rgb \
sandgrass.rgb \
sand.rgb \
shine.rgb \
skirpyicon.rgb \
smoke.rgb \
spark.rgb \
speedback.rgb \
speedfore.rgb \
sshot-beach.rgb \
sshot-bsodcastle.rgb \
sshot-geekopeak.rgb \
sshot-gownsbow.rgb \
sshot-islandtrack.rgb \
sshot-lighthouse.rgb \
sshot-littlevolcano.rgb \
sshot-olivermath.rgb \
sshot-race.rgb \
sshot-sandtrack.rgb \
sshot-startrack.rgb \
sshot-subseatrack.rgb \
sshot-tuxtrack.rgb \
sshot-volcano.rgb \
stonegrass.rgb \
stones.rgb \
stonetex.rgb \
stonewall.rgb \
st_title_screen.rgb \
sushiicon.rgb \
sushishadow.rgb \
tinytux.rgb \
topview-beach.rgb \
topview-bsodcastle.rgb \
topview-geekopeak.rgb \
topview-gownsbow.rgb \
topview-islandtrack.rgb \
topview-lighthouse.rgb \
topview-littlevolcano.rgb \
topview-olivermath.rgb \
topview-race.rgb \
topview-sandtrack.rgb \
topview-startrack.rgb \
topview-subseatrack.rgb \
topview-tuxtrack.rgb \
topview-volcano.rgb \
track2.rgb \
trackborder.rgb \
track.rgb \
tux_body.rgb \
Tuxclouds.rgb \
tuxicon.rgb \
tuxkart.rgb \
tuxkartshadow.rgb \
tv.rgb \
usaflag.rgb \
water.rgb \
wheel.rgb \
window.rgb \
wood.rgb \
yetiicon.rgb \
yetishadow.rgb \
zipper_collect.rgb \
zipper.rgb 

nobase_pkgdata_DATA = \
island/grass2.rgb \
island/palmtree3.rgb \
island/road_sand.rgb \
island/road_sand_side.rgb \
island/rock1.rgb \
island/rock4.rgb \
island/sand2.rgb \
island/sky2.rgb \
island/water2.rgb \
island/rock4.rgb \
island/readme.txt

EXTRA_DIST = $(pkgdata_DATA) $(nobase_pkgdata_DATA)

